# lyriclens-desktop

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
cloudflare-worker/: deploy.sh  worker.js  wrangler.toml
cloudflare-worker-dicts/: deploy.sh  upload-blob.sh  worker.js  wrangler.toml
docs/previews/: llm-inline-card-preview.html
docs/roadmap/: README.md  progress.md
scripts/: dev.ps1
src/: analysis-cache.ts  analysis.ts  cefrj.ts  enexam.ts  jlpt.ts  main.ts  notebook.ts  styles.css  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cefrj.rs  credentials.rs  dict_store.rs  enexam.rs  jlpt.rs  lib.rs  lrclib.rs  main.rs  notebook.rs  smtc.rs
